Changed abbreviations of some languages according to those used in tinyMCE

--- a/language/ar/lng.conf
+++ b/language/ar/lng.conf
@@ -188,31 +188,31 @@ searchitem = ابحث عن عنصر
 ar = عربي
 bg = بلغاري
 ca = 
-cn = صيني
-cz = شيكي
+zh = صيني
+cs = شيكي
 da = الدانماركية
 de = المانية
 en = إنجليزي
 es = اسباني
-es_gl = الجاليكية
+gl = الجاليكية
 fi = 
 fr = فرنسي
 hu = مجري
 it = إيطالي
-jp = ياباني
+ja = ياباني
 lt = اللتوانية
 nl = هولندي
-nor =
+nn =
 pl = بولندي
 pt = برتغالي
 pt_br = برتغالي (برازيلي)
 ro = روماني
-rs = صربي
+sr = صربي
 ru = روسي
 se = 
 sk = 
 tr = تركي
-ua = 
+uk = 
 calendar = التقويم
 dateformat = هيئة التاريخ
 timezone = زمن المنطقة
