--- a/language/ca/lng.conf
+++ b/language/ca/lng.conf
@@ -188,31 +188,31 @@ searchitem = Cercar article
 ar = Àrab
 bg = Búlgar
 ca = Català
-cn = Xinès
-cz = Txec
+zh = Xinès
+cs = Txec
 da = Danès
 de = Alemany
 en = Anglès
 es = Català
-es_gl = Gallec
+gl = Gallec
 fi = Finlandès
 fr = Francès
 hu = Hongarès
 it = Italiano
-jp = Japonès
+ja = Japonès
 lt = Lituà
 nl = Neerlandès
-nor =
+nn =
 pl = Polonès
 pt = Portugués
 pt_br = Portuguès (Brasil)
 ro = Romanès
-rs = Serbi
+sr = Serbi
 ru = Rus
 se = Suec
 sk = Eslovac
 tr = Turc
-ua = Ucranià
+uk = Ucranià
 calendar = Calendari
 dateformat = Format de la data
 timezone = Horari de la zona
