--- a/language/da/lng.conf
+++ b/language/da/lng.conf
@@ -194,32 +194,32 @@ searchitem = Søgestreng
 ar = Arabisk
 bg = Bulgarsk
 ca = Catalan
-cn = Kinesisk
-cz = Tjekkisk
+zh = Kinesisk
+cs = Tjekkisk
 da = Dansk
 de = Tysk
 en = Engelsk
 es = Spansk
-es_gl = Galicisk
+gl = Galicisk
 fi = Finsk
 fr = Fransk
 gr = Græsk
 hu = Ungarsk
 it = Italiensk
-jp = Japansk
+ja = Japansk
 lt = Litauisk
 nl = Hollandsk
-nor =
+nn =
 pl = Polsk
 pt = Portugisisk
 pt_br = Portugisisk (brasiliensk)
 ro = Rumænsk
-rs = Serbisk
+sr = Serbisk
 ru = Russisk
 se = Svensk
 sk = Slovensk
 tr = Tyrkisk
-ua = Ukraine
+uk = Ukraine
 calendar = Kalender
 dateformat = Dato format
 timezone = Tidszone
