--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -190,32 +190,32 @@ searchitem = Suchbegriff
 ar = Arabisch
 bg = Bulgarisch
 ca = Katalanisch
-cn = Chinesisch
-cz = Tschechisch
+zh = Chinesisch
+cs = Tschechisch
 da = Dänisch
 de = Deutsch
 el = Griechisch
 en = Englisch
 es = Spanisch
-es_gl = Galizisch
+gl = Galizisch
 fi = Finnisch
 fr = Französisch
 hu = Ungarisch
 it = Italienisch
-jp = Japanisch
+ja = Japanisch
 lt = Litauisch
 nl = Niederländisch
-nor = Norwegisch
+nn = Norwegisch
 pl = Polnisch
 pt = Portugiesisch
 pt_br = Portugiesisch (Brasilien)
 ro = Rumänisch
-rs = Serbisch
+sr = Serbisch
 ru = Russisch
 se = Schwedisch
 sk = Slovakisch
 tr = Türkisch
-ua = Ukrainisch
+uk = Ukrainisch
 calendar = Kalender
 dateformat = Datumsformat
 timezone = Zeitzone
