--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -218,32 +218,32 @@ searchitem = Search item
 ar = Arabic
 bg = Bulgarian
 ca = Catalan
-cn = Chinese
-cz = Czech
+zh = Chinese
+cs = Czech
 da = Danish
 de = German
 el = Greek
 en = English
 es = Spanish
-es_gl = Galician
+gl = Galician
 fi = Finnish
 fr = French
 hu = Hungarian
 it = Italian
-jp = Japanese
+ja = Japanese
 lt = Lithuanian
 nl = Dutch
-nor = Norwegian
+nn = Norwegian
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brazilian)
 ro = Romanian
-rs = Serbian
+sr = Serbian
 ru = Russian
 se = Swedish
 sk = Slovak
 tr = Turkish
-ua = Ukranian
+uk = Ukranian
 
 {* Calendar *}
 
