--- a/language/es/lng.conf
+++ b/language/es/lng.conf
@@ -188,31 +188,31 @@ searchitem = Buscar objeto
 ar = Arabe
 bg = Búlgaro
 ca = Catalán
-cn = Chino
-cz = Checo
+zh = Chino
+cs = Checo
 da = Danés
 de = Alemán
 en = Inglés
 es = Español
-es_gl = Gallego
+gl = Gallego
 fi = Finés
 fr = Francés
 hu = Húngara
 it = Italiano
-jp = Japonés
+ja = Japonés
 lt = Lituano
 nl = Neerlandés
-nor =
+nn =
 pl = Polaco
 pt = Portugués
 pt_br = Portugués (Brasil)
 ro = Rumano
-rs = Serbio
+sr = Serbio
 ru = Ruso
 se = Sueco
 sk = Eslovaco
 tr = Turco
-ua = Ucraniano
+uk = Ucraniano
 calendar = Calendario
 dateformat = Formato de fecha
 timezone = Zona horaria
