--- a/language/fi/lng.conf
+++ b/language/fi/lng.conf
@@ -188,31 +188,31 @@ searchitem = Hae kohdetta
 ar = arabia
 bg = bulgaria
 ca = katalaani
-cn = kiina
-cz = tsekki
+zh = kiina
+cs = tsekki
 da = tanska
 de = saksa
 en = englanti
 es = espanja
-es_gl = galego
+gl = galego
 fi = suomi
 fr = ranska
 hu = unkari
 it = italia
-jp = japani
+ja = japani
 lt = liettua
 nl = hollanti
-nor =
+nn =
 pl = puola
 pt = portugali
 pt_br = portugali (Brasilia)
 ro = romania
-rs = serbi
+sr = serbi
 ru = venäjä
 se = ruotsi
 sk = slovakki
 tr = turkki
-ua = ukraina
+uk = ukraina
 calendar = Kalenteri
 dateformat = Päiväys
 timezone = Aikavyöhyke
