--- a/language/fr/lng.conf
+++ b/language/fr/lng.conf
@@ -188,31 +188,31 @@ searchitem = Rechercher un élément
 ar = Arabe
 bg = Bulgare
 ca = Catalan
-cn = Chinois
-cz = Tchèque
+zh = Chinois
+cs = Tchèque
 da = Danois
 de = Allemand
 en = Anglais
 es = Espagnol
-es_gl = Galicien
+gl = Galicien
 fi = Finnois
 fr = Français
 hu = Hongrois
 it = Italien
-jp = Japonais
+ja = Japonais
 lt = Lituanien
 nl = Néerlandais
-nor =
+nn =
 pl = Polonais
 pt = Portugais
 pt_br = Portugais (Brésil)
 ro = Roumain
-rs = Serbe
+sr = Serbe
 ru = Russe
 se = Suédois
 sk = Slovaque
 tr = Turc
-ua = Ukrainien
+uk = Ukrainien
 calendar = Calendrier
 dateformat = Format des dates
 timezone = Fuseau horaire
