--- a/language/it/lng.conf
+++ b/language/it/lng.conf
@@ -188,31 +188,31 @@ searchitem = Ricerca oggetto
 ar = Arabo
 bg = Bulgaro
 ca = Catalano
-cn = Cinese
-cz = Ceco
+zh = Cinese
+cs = Ceco
 da = Danese
 de = Tedesco
 en = Inglese
 es = Spagnolo
-es_gl = Galiziano
+gl = Galiziano
 fi = Finlandese
 fr = Francese
 hu = Ungherese
 it = Italiano
-jp = Giapponese
+ja = Giapponese
 lt = Lituano
 nl = Olandese
-nor =
+nn =
 pl = Polacco
 pt = Portoghese
 pt_br = Portoghese (Brasile)
 ro = Rumeno
-rs = Serbo
+sr = Serbo
 ru = Russo
 se = Svedese
 sk = Slovacco
 tr = Turco
-ua = Ucraino
+uk = Ucraino
 calendar = Calendario
 dateformat = Formato
 timezone = Fuso orario
