--- a/language/lt/lng.conf
+++ b/language/lt/lng.conf
@@ -188,31 +188,31 @@ searchitem = Paieškos elemtas
 ar = 
 bg = 
 ca = 
-cn = 
-cz = Čekiškai
+zh = 
+cs = Čekiškai
 da = Daniškai
 de = Vokiškai
 en = Angliškai
 es = Ispaniškai
-es_gl =
+gl =
 fi = 
 fr = Prancūziškai
 hu = 
 it = Itališkai
-jp = Japoniškai
+ja = Japoniškai
 lt = Lietuviškai
 nl = 
-nor =
+nn =
 pl = Lenkiškai
 pt = 
 pt_br = Portugališkai
 ro = Rumuniškai
-rs = 
+sr = 
 ru = Rusiškai
 se = 
 sk = 
 tr = 
-ua = 
+uk = 
 calendar = 
 dateformat = 
 timezone = 
