--- a/language/nl/lng.conf
+++ b/language/nl/lng.conf
@@ -194,32 +194,32 @@ searchitem = Zoekterm
 ar = Arabisch
 bg = Bulgaars
 ca = Catalaans
-cn = Chinees
-cz = Czechisch
+zh = Chinees
+cs = Czechisch
 da = Deens
 de = Duits
 en = Engels
 es = Spaans
-es_gl = Galician
+gl = Galician
 fi = Fins
 fr = Frans
 gr = Greek
 hu = Hongaars
 it = Italiaans
-jp = Japans
+ja = Japans
 lt = Lithouws
 nl = Nederlands
-nor = Noorweegs
+nn = Noorweegs
 pl = Pools
 pt = Portugees
 pt_br = Portugees (Br)
 ro = Roemeens
-rs = Servisch
+sr = Servisch
 ru = Russisch
 se = Zweeds
 sk = Slowaaks
 tr = Turks
-ua = Oekraïens
+uk = Oekraïens
 calendar = Kalender
 dateformat = Formaat datum
 timezone = Tijdszone
