--- a/language/pl/lng.conf
+++ b/language/pl/lng.conf
@@ -188,31 +188,31 @@ searchitem = Search item
 ar =
 bg =
 ca =
-cn =
-cz =
+zh =
+cs =
 da =
 de =
 en =
 es =
-es_gl =
+gl =
 fi = Fiński
 fr =
 hu =
 it =
-jp =
+ja =
 lt =
 nl =
-nor =
+nn =
 pl = Polski
 pt =
 pt_br =
 ro =
-rs =
+sr =
 ru =
 se =
 sk =
 tr =
-ua = Ukraiński
+uk = Ukraiński
 calendar = Kalendarz
 dateformat = Format daty
 timezone = Strefa czasowa
