--- a/language/pt/lng.conf
+++ b/language/pt/lng.conf
@@ -188,31 +188,31 @@ searchitem = Pesquisar item
 ar = Arabe
 bg = Búlgaro
 ca = Catalão
-cn = Chinês
-cz = Checo
+zh = Chinês
+cs = Checo
 da = Dinamarquês
 de = Alemão
 en = Inglês
 es = Espanhol
-es_gl = Galego
+gl = Galego
 fi = Finlandês
 fr = Francês
 hu = Húngaro
 it = Italiano
-jp = Japonês
+ja = Japonês
 lt = Lituano
 nl = Holandês
-nor =
+nn =
 pl = Polonês
 pt = Português
 pt_br = Português (Brasil)
 ro = Romeno
-rs = Sérvio
+sr = Sérvio
 ru = Russo
 se = Suéco
 sk = Eslovaco
 tr = Turco
-ua = Ucraniano
+uk = Ucraniano
 calendar = Calendário
 dateformat = Formato de data
 timezone = Fuso horário
