--- a/language/pt_br/lng.conf
+++ b/language/pt_br/lng.conf
@@ -188,31 +188,31 @@ searchitem = Pesquisar item
 ar = Arabe
 bg = Bulgária
 ca = Catalão
-cn = Chinês
-cz = Checa
+zh = Chinês
+cs = Checa
 da = Dinamarquês
 de = Alemão
 en = Inglês
 es = Espanhol
-es_gl = Galego
+gl = Galego
 fi = Finlandês
 fr = Francês
 hu = Hungria
 it = Italiano
-jp = Japão
+ja = Japão
 lt = Lituânia
 nl = Holandês
-nor =
+nn =
 pl = Polonês
 pt = Português
 pt_br = Português (Brasil)
 ro = Romeno
-rs = Sérvio
+sr = Sérvio
 ru = Russo
 se = Suéco
 sk = Eslovaco
 tr = Turco
-ua = Ucraniano
+uk = Ucraniano
 calendar = Calendário
 dateformat = Formato da Data
 timezone = Fuso horário
