--- a/language/ro/lng.conf
+++ b/language/ro/lng.conf
@@ -188,31 +188,31 @@ searchitem =
 ar = 
 bg = 
 ca = 
-cn = 
-cz = Ceh
+zh = 
+cs = Ceh
 da = 
 de = German
 en = Enlezesc
 es = Spaniol
-es_gl = 
+gl =
 fi = 
 fr = Franţuzesc
 hu = 
 it = 
-jp = 
+ja = 
 lt = 
 nl = 
-nor =
+nn =
 pl = Polonez
 pt = 
 pt_br = 
 ro = Românesc
-rs = 
+sr = 
 ru = 
 se = 
 sk = 
 tr = 
-ua = 
+uk = 
 calendar = 
 dateformat = 
 timezone = 
