--- a/language/ru/lng.conf
+++ b/language/ru/lng.conf
@@ -188,31 +188,31 @@ searchitem = Запрос
 ar = Арабский
 bg = Болгарский
 ca = Каталанский
-cn = Китайский
-cz = Чешский
+zh = Китайский
+cs = Чешский
 da = Датский
 de = Немецкий
 en = Английский
 es = Испанский
-es_gl = Галисийский
+gl = Галисийский
 fi = Финский
 fr = Французский
 hu = Венгерский
 it = Итальянский
-jp = Японский
+ja = Японский
 lt = Литовский
 nl = Голландский
-nor =
+nn =
 pl = Польский
 pt = Португальский
 pt_br = Португальский (Бразильский)
 ro = Румынский
-rs = Сербский
+sr = Сербский
 ru = Русский
 se = Шведский
 sk = Словацкий
 tr = Турецкий
-ua = Украинский
+uk = Украинский
 calendar = Календарь
 dateformat = Формат даты
 timezone = Часовой пояс
