--- a/language/se/lng.conf
+++ b/language/se/lng.conf
@@ -188,31 +188,31 @@ searchitem = Sökpost
 ar = Arabiska
 bg = Bulgariska
 ca = Katalanska
-cn = Kinesiska
-cz = Tjeckiska
+zh = Kinesiska
+cs = Tjeckiska
 da = Danska
 de = Tyska
 en = Engelska
 es = Spanska
-es_gl = Galiciska
+gl = Galiciska
 fi = Finska
 fr = Franska
 hu = Ungerska
 it = Italienska
-jp = Japanska
+ja = Japanska
 lt = Litauiska
 nl = Nederländska
-nor =
+nn =
 pl = Polska
 pt = Portugisiska
 pt_br = Portugisiska (Brasilien)
 ro = Rumänska
-rs = Serbiska
+sr = Serbiska
 ru = Ryska
 se = Svenska
 sk = Slovakiska
 tr = Turkiska
-ua = Ukrainska
+uk = Ukrainska
 calendar = Kalender
 dateformat = Datumformat
 timezone = Tidszon
