--- a/language/sk/lng.conf
+++ b/language/sk/lng.conf
@@ -188,31 +188,31 @@ searchitem = Hľadaný výraz
 ar = Arabský
 bg = Bulharština
 ca = Katalánsky
-cn = Čínština
-cz = Čeština
+zh = Čínština
+cs = Čeština
 da = Dánština
 de = Němčina
 en = Angličtina
 es = Španělština
-es_gl = Galicijština
+gl = Galicijština
 fi = Fínsky
 fr = Francouzština
 hu = Maďarčina
 it = Italština
-jp = Japonština
+ja = Japonština
 lt = Litevština
 nl = Nizozemština
-nor =
+nn =
 pl = Polština
 pt = Portugalština
 pt_br = Portugalština (Brazílie)
 ro = Rumunština
-rs = Srbština
+sr = Srbština
 ru = Ruština
 se = Švédsky
 sk = Slovenčina
 tr = Turečtina
-ua = Ukrajinsky
+uk = Ukrajinsky
 calendar = Kalendár
 dateformat = Formát dátumu
 timezone = Časové pásmo
