--- a/language/tr/lng.conf
+++ b/language/tr/lng.conf
@@ -188,31 +188,31 @@ searchitem = Arananlar
 ar = Arapça
 bg = Bulgarca
 ca = Katalanca
-cn = Çince
-cz = Çekoslavakça
+zh = Çince
+cs = Çekoslavakça
 da = Danimarkaca
 de = Almanca
 en = İngilizce
 es = İspanyolca
-es_gl = İspanyolca (gl)
+es = İspanyolca (gl)
 fi = Fince
 fr = Fransýzca
 hu = Macarca
 it = İtalyanca
-jp = Japonca
+ja = Japonca
 lt = İtalyanca
 nl = Litvanyaca
-nor =
+nn =
 pl = Polonyoca
 pt = Portekizce
 pt_br = Portekizce (br)
 ro = Romanyaca
-rs = Sırpça
+sr = Sırpça
 ru = Rusça
 se = İsveççe
 sk = Slovakca
 tr = Türkçe
-ua = Ukraynaca
+uk = Ukraynaca
 calendar = Takvim
 dateformat = Tarif biçimi
 timezone = Zaman bölgesi
