--- a/language/bg/lng.conf
+++ b/language/bg/lng.conf
@@ -188,31 +188,31 @@ searchitem = Търси точка
 ar = Arabian
 bg = Bulgarian
 ca = Catalan
-cn = Chinese
-cz = Czech
+zh = Chinese
+cs = Czech
 da = Danish
 de = German
 en = English
 es = Spanish
-es_gl = Galician
+gl = Galician
 fi = Finnish
 fr = French
 hu = Hungarian
 it = Italian
-jp = Japanese
+ja = Japanese
 lt = Lithuanian
 nl = Dutch
-nor =
+nn =
 pl = Polish
 pt = Portuguese
 pt_br = Portuguese (Brasil)
 ro = Romanian
-rs = Serbian
+sr = Serbian
 ru = Russian
 se = Swedish
 sk = Slovak
 tr = Turkish
-ua = Ukranian
+uk = Ukranian
 calendar = Календар
 dateformat = Формат за дата
 timezone = Часова зона
