--- a/language/nl/lng.conf
+++ b/language/nl/lng.conf
@@ -289,7 +289,7 @@ started = Gestart
 totalhours = Totale tijd [uur]
 timetable = Urenverantwoording voor
 timetracker = Urenverantwoording
-timetrackeradded = Urenverantwoording toegevoegt
+timetrackeradded = Urenverantwoording toegevoegd
 add = Toevoegen
 addrole = Toevoegen
 delete = Verwijder
