added new russian languagefile contributed by a.i.sidoryak

--- a/language/ru/lng.conf
+++ b/language/ru/lng.conf
@@ -24,12 +24,13 @@ lastlogin = Был здесь в последний раз
 locale = Язык
 login = Логин
 loginbutton = Войти
-loginerror = Ошибка!<br />Проверьте имя пользователя или пароль.
+loginerror = Ошибка!<br /> Проверьте имя пользователя или пароль.
 logout = Выход
 male = Мужской
 members = Участники проекта
 myaccount = Мой профиль
 newpass = Новый пароль
+none = Нету
 oldpass = Старый пароль
 password = Пароль
 phone = Телефон
@@ -54,6 +55,7 @@ zip = Почтовый индекс
 access = Доступ
 addproject = Добавить проект
 assignto = Назначить
+budget = Бюджет
 closedprojects = Закрытые проекты
 deassign = Снять
 description = Описание
@@ -85,7 +87,7 @@ edittasklist = Редактировать список задач
 latetasks = Просроченные задачи
 mytasks = Мои задачи
 newtasks = Актуальные задачи
-notasklists =
+notasklists = Списков задач не найдено.<br />Пожалуйста <a href
 notasks = В настоящее время задач нет
 openprogress = Открытый прогресс
 status = Статус
@@ -143,14 +145,14 @@ mailmethod = Метод отправки
 mailserver = Сервер
 mailusername = Пароль
 mailpass = Пароль
-profileaddedsubject =
-profileaddedtext =
+profileaddedsubject = Collabtive - Ваш новый профиль
+profileaddedtext = Ваш новый профиль создан
 profilepass = Пароль
 profileusername = Пользователь
-projectassignedsubject =
-projectassignedtext =
-taskassignedsubject =
-taskassignedtext =
+projectassignedsubject = Collabtive: Новый проект
+projectassignedtext = Вы назначены исполнителем проекта:
+taskassignedsubject = Collabtive: Новое задание
+taskassignedtext = Вы назначены исполнителем задачи:
 addfile = Добавить файл
 addfiles = Добавить файлы
 addfolder = Добавить папку
@@ -162,6 +164,8 @@ directory = Директория
 editfile = Редактировать файл
 editfolder = Редактировать папку
 file = Файл
+filecreatedsubject = Уведомление: файл успешно добавлен
+filecreatedtext = Файл был успешно добавлен в один из Ваших проектов.
 files = Файлы
 filewasadded = Файл добавлен
 filewasdeleted = Файл удален
@@ -172,7 +176,9 @@ folderwasdeleted = Папка удалена
 folderwasedited = Папка изменена
 managefolders = Управление папками
 maxsize = Максимальный размер файла
+parent = На уровень выше
 rootdir = Корневая директория
+visibility = Видим для
 advancedsearch = Расширенный поиск
 didyoumean = Возможно, вы имели в виду
 gosearch = Поиск
@@ -188,31 +194,32 @@ searchitem = Запрос
 ar = Арабский
 bg = Болгарский
 ca = Каталанский
-zh = Китайский
-cs = Чешский
+cn = Китайский
+cz = Чешский
 da = Датский
 de = Немецкий
 en = Английский
 es = Испанский
-gl = Галисийский
+es_gl = Галисийский
 fi = Финский
 fr = Французский
+gr = Греческий
 hu = Венгерский
 it = Итальянский
-ja = Японский
+jp = Японский
 lt = Литовский
 nl = Голландский
-nn =
+no = нет
 pl = Польский
 pt = Португальский
 pt_br = Португальский (Бразильский)
 ro = Румынский
-sr = Сербский
+rs = Сербский
 ru = Русский
 se = Шведский
 sk = Словацкий
 tr = Турецкий
-uk = Украинский
+ua = Украинский
 calendar = Календарь
 dateformat = Формат даты
 timezone = Часовой пояс
@@ -238,7 +245,7 @@ october = Октябрь
 november = Ноябрь
 december = Декабрь
 accessdenied = Доступ запрещен
-confirmdel =
+confirmdel = Подтвердите удаление
 error = Ошибка
 goback = Назад
 nopermission = Доступ запрещен
@@ -320,12 +327,13 @@ edited = изменено
 excelexport = Excel
 export = Экспорт
 favicon = Иконка
+general = Главный
 help = помощь
 icalexport = iCal
 import = Импорт
 importsuccess = Импорт завершен
 inactive = неактивный
-no = нет
+notify = Уведомление
 objoff = Неактивен
 objon = Активен
 on = составлен
