--- a/language/ro/lng.conf
+++ b/language/ro/lng.conf
@@ -1,229 +1,268 @@
+[strings]
+{* Romanian translation by Dragoş STOICA (dragos.stoica@24ksoft.eu) - http://www.24ksoft.eu *}
+{* User / Company *}
+
 address = Adresa
-adduser = Adaugat clientul
-admin = Administratorul
+adduser = Adaugă utilizator
+admin = Administrator
 all = Toţi
 avatar = Fotografie
-cellphone = 
-changepassword = 
-chatwith = 
-city = 
-client = 
+cellphone = Mobil
+changepassword = Schimbaţi parola
+chatwith = Lăţime chat
+city = Oraş
+client = Client
 company = Firma
-confirmlogout = 
+confirmlogout = Ieşire ? 
 contact = Contact
-country = Patrie
-deassignuser = 
-deleteform = 
-deleteuser = 
-edituser = Datele clientului schimbate
+country = Ţara
+deassignuser = Dealocare utilizatorul 
+deleteform = Reatribuie task-ul utilizatorului?
+deleteuser = Şterge utilizatorul
+edituser = Modifică utilizatorul
 email = E-Mail
-female = 
-firstname = 
-gender = 
-lastlogin = 
+female = Feminin
+firstname = Prenume
+gender = Sex
+lastlogin = Ultima activitate
 locale = Limba
-login = A te inscrie
-loginbutton = Buton de inscriere
-loginerror = Nu te-ai registrat.<br />Corecteasa-ti numele si passwort-ul.
-logout = A iesi
-male = 
+login = Login
+loginbutton = Login
+loginerror = Nu eşti înregistrat(ă).<br />Verifică numele de utilizator şi parola.
+logout = Logout
+male = Masculin
 members = Membri
 myaccount = Profilul meu
-newpass = 
-oldpass = 
-password = Passwort-ul
-phone = 
-rate = 
-repeatpass = 
-state = Judetul
-stayloggedin = A sta inscris
-template = 
-url = 
-user = Client
-useradministration = 
-userprofile = Profil
-usersonline = 
-userwasadded = 
-userwasassigned = 
-userwasdeassigned = 
-userwasdeleted = 
-userwasedited = 
-vcardexport = 
-welcomeback = Bine ai venit inapoi
-zip = 
-access = Aces
-addproject = A adauga proiectul
-assignto = Trimis la
-closedprojects = Proiecte inchise
-deassign = 
+newpass = Paloră nouă
+none = Nimic
+oldpass = Vechea parolă
+password = Parolă
+phone = Tel fix
+rate = Rata orară
+repeatpass = Repetă parola
+state = Judeţul
+stayloggedin = Ţine-mă conectat
+template = Template
+url = URL
+user = Utilizator
+useradministration = Adminstrare utilizatori
+userprofile = Profil utilizator
+usersonline = Utilizatori conectaţi
+userwasadded = Utilizator adăugat
+userwasassigned = Utilizator alocat
+userwasdeassigned = Utilizator dealocat
+userwasdeleted = Utilizator şters
+userwasedited = Utilizator modificat
+vcardexport = vCard
+welcomeback = Bine ai revenit
+zip = Cod poştal
+
+{* Project *}
+
+access = Acces
+addproject = Adaugă proiect
+assignto = Alocat la
+budget = Buget
+closedprojects = Proiecte închise
+deassign = Dealocă
 description = Descriere
-editproject = 
+editproject = Modifică proiectul
 myprojects = Proiectele mele
 name = Nume
-noprojects = 
+noprojects = Nu au fost găsite proiecte
 openprojects = Proiecte deschise
 project = Proiect
 projects = Proiecte
-projectadministration = Administrarea proiectului
+projectadministration = Administrare proiecte
 projectname = Numele proiectului
-projectwasadded = 
-projectwasclosed = 
-projectwasdeleted = 
-projectwasedited = 
-projectwasopened = 
-report = 
+projectwasadded = Proiect adăugat
+projectwasclosed = Proiect închis
+projectwasdeleted = Proiect şters
+projectwasedited = Proiect modificat
+projectwasopened = Proiect deschis
+report = Raport
 start = Start
-addtask = Adauga misiunea
-addtasklist = Adauga lista de misiuni
-assign = A recomanda
-deletetasks = 
-done = 
-donetasklists = 
-donetasks = Misiune indeplinita
-edittask = 
-edittasklist = 
-latetasks = Misiune intarsiata
-mytasks = Misiunea mea
-newtasks = Actuala misiune
-notasklists = 
-notasks = 
-openprogress = 
-status = Statutul
-task = Misiune
-tasklist = Lista de misiuni
-tasklists = Liste de misiuni
-tasklistwasadded = 
-tasklistwasclosed = 
-tasklistwasdeleted = 
-tasklistwasedited = 
-tasklistwasopened = 
-tasks = Misiuni
-taskwasadded = 
-taskwasassigned = 
-taskwasclosed = 
-taskwasdeassigned = 
-taskwasdeleted = 
-taskwasedited = 
-taskwasopened = 
+
+{* Task / Tasklist *}
+
+addtask = Adaugă task
+addtasklist = Adaugă listă de task-uri
+assign = Alocă
+deletetasks = Şterge task
+done = Complet
+donetasklists = Listă de task-uri completate 
+donetasks = Task-uri completate
+edittask = Modifică task
+edittasklist = Modifică lista de task-uri
+latetasks = Task întărziat
+mytasks = Task-urile mele
+newtasks = Task nou
+notasklists = Nu au fost găsite task-uri.<br />Vă rog să creaţi o listă de task-uri.
+notasks = Nu sunt task-uri deschise
+openprogress = Deschis
+status = Statut
+task = Task
+tasklist = Lista de task-uri
+tasklists = Liste de task-uri
+tasklistwasadded = Listă de task-uri creată
+tasklistwasclosed = Listă de task-uri completată
+tasklistwasdeleted = Listă de task-uri ştearsă
+tasklistwasedited = Listă de task-uri modificată
+tasklistwasopened = Listă de task-uri deschisă
+tasks = Task-uri
+taskwasadded = Task adăugat
+taskwasassigned = Task alocat
+taskwasclosed = Task închis
+taskwasdeassigned = Task dealocat
+taskwasdeleted = Task şters
+taskwasedited = Task modificat
+taskwasopened = Task deschis
 text = Text
-todaytasks = Misiunile de azi
-addmilestone = A adauga milestone
-donemilestones = Milestone-uri-le rezolvate
-due = Termin la
-editmilestone = 
-end = Sfirsit
-latestones = Milestone-uri-le intirziate
+todaytasks = Task-urile de azi
+
+{* Milestone *}
+
+addmilestone = Adaugă milestone
+donemilestones = Milestone-uri rezolvate
+due = Data limită
+editmilestone =  Modifică milestone
+end = Sfârşit
+latestones = Milestone-uri întârziate
 milestone = Milestone
-milestones = Milestones
-milestonewasadded = 
-milestonewasclosed = 
-milestonewasdeleted = 
-milestonewasedited = 
-milestonewasopened = 
-newmilestones = Milestone-ul actual
-todaystones = Milestone-ul cotidian
-addmessage = A adauga mesajul
-answer = A raspunde
-editmessage = 
+milestones = Milestone-uri
+milestonewasadded = Milestone adăugat
+milestonewasclosed = Milestone completat
+milestonewasdeleted = Milestone şters
+milestonewasedited = Milestone modificat
+milestonewasopened = Milestone deschis
+newmilestones = Milestone nou
+todaystones = Milestone de azi
+
+{* Messages *}
+
+addmessage = Adaugă mesaj
+answer = Răspuns
+editmessage = Modifică mesaj
 message = Mesaj
-messages = Mesajele
-messagewasadded = 
-messagewasdeleted = 
-messagewasedited = 
-mymessages = 
-replies = A raspunde
-reply = Raspuns
-replywasadded = 
-replywasdeleted = 
-replywasedited = 
+messages = Mesaje
+messagewasadded = Mesaj adăugat 
+messagewasdeleted = Mesaj şters
+messagewasedited = Mesaj modificat
+mymessages = Mesajele mele
+replies = Răspunsuri
+reply = Răspuns
+replywasadded = Răspuns adăugat
+replywasdeleted = Răspuns şters
+replywasedited = Răspuns modificat
 title = Titlu
-mailfrommail = 
-mailfromname = 
-mailmethod = 
-mailserver = 
-mailusername = 
-mailpass = 
-profileaddedsubject = 
-profileaddedtext = 
-profilepass = 
-profileusername = 
-projectassignedsubject = 
-projectassignedtext = 
-taskassignedsubject = 
-taskassignedtext = 
-addfile = A adauga datele
-addfiles = 
-addfolder = 
-attachfile = 
-attachfiles = 
+
+{* eMails *}
+
+mailfrommail = E-mail de la
+mailfromname = Nume expeditor
+mailmethod = Metoda
+mailserver = Sever
+mailusername = Utilzator SMTP
+mailpass = Parola SMTP
+profileaddedsubject = Collabtive - Noul cont de utilizator
+profileaddedtext = Un nou cont de utilizator a fost creat pentru tine.
+profilepass = Parola
+profileusername = Nume de utilizator
+projectassignedsubject = Notificare Collabtive – Proiect alocat
+projectassignedtext = Salut,<br /><br />un nou proiect a fost alocat pentru tine:<br />
+taskassignedsubject = Notificare Collabtive – Task alocat
+taskassignedtext = Salut,<br /><br />un nou task a fost alocat pentru tine:<br />
+
+{* Files *}
+
+addfile = Adaugă fişier
+addfiles = Adaugă fişiere
+addfolder = Adaugă dosar
+attachfile = Ataşează fişier
+attachfiles = Ataşează fişiere
 count = Numarul
-directories = 
-directory = 
-editfile = A prelucra datele
-editfolder = 
-file = Datele
-files = Datele
-filewasadded = 
-filewasdeleted = 
-filewasedited = 
-folder = 
-folderwasadded = 
-folderwasdeleted = 
-folderwasedited = 
-managefolders = 
+directories = Dosare
+directory = Dosar
+editfile = Modifică fişier
+editfolder = Modifică dosar
+file = Fişier
+filecreatedsubject = Notificare Collabtive: Fişier adăugat
+filecreatedtext = Salut,<br /><br />un fişier a fost adăugat la unul din proiectele tale.
+files = Fişiere
+filewasadded = Fişier adăugat
+filewasdeleted = Fişier şters
+filewasedited = Fişier modificat
+folder = Dosar
+folderwasadded = Dosar adăugat
+folderwasdeleted = Dosar şters
+folderwasedited = Dosar modificat
+managefolders = Gestionează dosarele
 maxsize = Capacitatea maxima
-rootdir = 
-advancedsearch = 
-didyoumean = 
-gosearch = 
-newsearch = 
-noresults = 
-refinesearch = 
-results = 
-resultsfor = 
-search = 
-searchfor = 
-searching = 
-searchitem = 
-ar = 
-bg = 
-ca = 
-zh = 
-cs = Ceh
-da = 
-de = German
-en = Enlezesc
-es = Spaniol
-gl =
-fi = 
-fr = Franţuzesc
-hu = 
-it = 
-ja = 
-lt = 
-nl = 
-nn =
-pl = Polonez
-pt = 
-pt_br = 
-ro = Românesc
-sr = 
-ru = 
-se = 
-sk = 
-tr = 
-uk = 
-calendar = 
-dateformat = 
-timezone = 
-prevmonth = Luna trecuta
+parent = Dosarul părinte
+rootdir = Dosarul rădăcină
+visibility = Vizibil pentru
+
+{* Search *}
+
+advancedsearch = Căutare avansată
+didyoumean = Ai vrut să spui
+gosearch = GO!
+newsearch = Căutare nouă
+noresults = Căutarea nu a găsit nici un rezultat
+refinesearch = Căutare precisă
+results = Rezultate
+resultsfor = Rezultate pentru
+search = Caută
+searchfor = Caută pentru
+searching = Cautare în curs ...
+searchitem = Termen de căautare
+
+{* Languages *}
+
+ar = Arabă
+bg = Culgară
+ca = Catalană
+cn = Chineză
+cz = Cehă
+da = Daneză
+de = Germană
+el = Greacă
+en = Enlgeză
+es = Spaniolă
+gl = Galeză
+fi = Finlandeză
+fr = Franceză
+hu = Ungară
+id =
+it = Italiană
+ja = Japoneză
+lt = Lituaniană
+nl = Olandeză
+nn = Norvegiană
+pl = Poloneză
+pt = Portugheză
+pt_br = Portugheză (Brazilila)
+ro = Română
+sr = Sârbă
+ru = Rusă
+se = Suedeză
+sk = Slovcă
+tr = Turcă
+uk = Ucraineană
+
+{* Calendar *}
+
+calendar = Calendar
+dateformat = Formatul datei
+timezone = Fus orar
+prevmonth = Luna trecută
 nextmonth = Luna viitoare
 monday = Lu
 tuesday = Ma
 wednesday = Mi
 thursday = Jo
 friday = Vi
-saturday = Si
+saturday = Sâ
 sunday = Du
 january = Ianuarie
 february = Februarie
@@ -237,117 +276,136 @@ september = Septembrie
 october = Octombrie
 november = Noiembrie
 december = Decembrie
-accessdenied = 
-confirmdel = 
-error = Greşeală
-goback = 
-nopermission = 
-notyourproject = 
-wrongfield = Dati va rog o valoare valabila in spatiu %FIELDNAME%
-wrongfields = Va rugam, dati in urmatoarele spatii, o valoare valabila.
-wrongselect = Legeti va rog o valoare valabila pentru %FIELDNAME%
-createadmin = 
-clickcontinue = 
-continue = A continua
-correctfaults = 
-db = 
-dbhost = 
-dbname = 
-dbpass = 
-dbuser = 
-insertdbaccessdata = 
-installcollabtive = 
-installerchecksconditions = 
-installerconditions = 
-installerlanguage = 
-installstep = 
-installsuccess = 
-iswritable = 
-makedirwritable = 
-makefilewritable = 
-phpversion = 
-proceedtologin = 
-comment = 
-edittimetracker = 
-endafterstart = 
-ended = 
-filter = 
-filterreport = 
-hours = 
-inserttime = 
-noassociatedtask = 
-reporting = 
-started = Pornit
-totalhours = 
-timetable = 
-timetracker = 
-timetrackeradded = 
-add = 
-addrole = 
-delete = A sterge
-delrole = 
-edit = A prelucra
-editrole = 
-permissionread = 
-permissions = 
-permissionswereedited = 
-role = 
-roleadded = 
-roleedited = 
-roles = 
+
+{* Errors *}
+
+accessdenied = Accesul interzis
+confirmdel = Sigur vrei să ştergi acest articol?\nOperaţia este ireversibilă.
+error = Eroare
+goback = Vă rog să navigaţi înapoi şi corectaţi greşeala
+nopermission = Nu aveţi drepturi
+notyourproject = Nu sunteţi alocat pe acest proiect 
+wrongfield = Introduceţi o valoare valabila pentru \"%FIELDNAME%\".
+wrongfields = Introduceţi o valoare validă pentru:\n\n
+wrongselect = Alegeţi o valoare validă pentru \"%FIELDNAME%\".
+
+{* Installation *}
+
+createadmin = Creaţi primul utilizator. Acesta va fi administratorul sistemului şi nu poate fi şters.
+clickcontinue = Click pe "continue" pentru a continua instalarea
+continue = Cointinuaţi
+correctfaults = Va rog corectaţi greşelile.
+db = Baza de date
+dbhost = Gazda pentru baza de date
+dbname = Numele bazei de date
+dbpass = Parola
+dbuser = Nume utilizator
+insertdbaccessdata = Va rog să introduceţi datele de acces la baza de date aici.
+installcollabtive = Instalaţi Collabtive
+installerchecksconditions = Verificare cerinţe
+installerconditions = Cerinţe pentru instalare
+installerlanguage = Limba pentru instalare
+installstep = Pas
+installsuccess = Instalarea s-a încheiat cu succes
+iswritable = poate fi modificat
+makedirwritable = Va rog să daţi drepturi de modificare pentru dosar.
+makefilewritable = Va rog să daţi drepturi de modificare pentru fişier.
+phpversion = Aveţi nevoie de minimum versiunea 5.1 de PHP pentru a rula Collabtive.
+proceedtologin = Mergeţi la pagina de login.
+
+{* Timetracker *}
+
+comment = Comentariu
+edittimetracker = Modificaţi înregistratrea din jurnal
+endafterstart = Timpul de încheiere trebuie să fie după timpul de începere.
+ended = Sfârşit
+filter = Filtru
+filterreport = Filtru de raportare
+hours = Ore
+inserttime = Inseraţi data şi ora curentă
+noassociatedtask = Nici un task asociat
+report = Raport
+reporting = Raportare
+started = Început
+totalhours = Total ore
+timetable = Orar pentru
+timetracker = Jurnal
+timetrackeradded = Înregistrare adăugată
+
+{* Roles / Permissions *}
+
+add = Adaugă
+addrole = Adaugă rol
+delete = Şterge
+delrole = Şterge rol
+edit = Modifică
+editrole = Modifică rol
+permissionread = Citire
+permissions = Drept
+permissionswereedited = Dreturi modificate 
+role = Rol
+roleadded = Rol adăugat
+roleedited = Rol modificat
+roles = Roluri
+
+{* Miscellaneous *}
+
 active = Activ
 activity = Activitate
-action = Actiune
-actions = Actiuni
-addbutton = A adauga
-added = adaugat
+action = Acţiune
+actions = Acţiuni
+addbutton = Adaugă
+added = adăugat
 administration = Administrare
-assigned = recomandat
-attachbutton = 
-by = de la
-cancel = A intrerupe
-chat = 
-chooseone = Alegeti, va rog!
-close = A incide
-closed = 
-day = 
-dayslate = Zile-intirziere
-daysleft = Zile ramase
-deassigned = 
-deleted = sters
+assigned = alocat
+attachbutton = Ataşează
+by = de la 
+cancel = Anulează
+chat = Chat
+chooseone = Alegeţi, va rog!
+close = Închide
+closed = închis
+day = Zi
+dayslate = Zile întârziere
+daysleft = Zile rămase
+deassigned = dealocat
+deleted = şters
 desktop = Birou
-edited = prelucrat
+edited = modificat
 excelexport = Excel
-export = 
+export = Export
 favicon = Favicon
+general = General
 help = Ajutor
 icalexport = iCal
-import = 
-importsuccess = 
+import = Import din Basecamp
+importsuccess = Import cu succes
 inactive = Inactiv
-no = nu
-objoff = 
-objon = 
-on = la
+no = Nu
+notify = Notifică
+objoff = Inactiv
+objon = Activ
+on = Creat
 or = sau
 open = Deschide
 opened = deschis
-overview = Privire de ansamblu
+overview = Tablou de bord
 pdfexport = PDF
-private = Particular
+private = Parivat
 public = Public
 rssfeed = RSS
-rsspass = 
-rssuser = 
-send = A trimite
-settings = Pozitii
-settingschanged = 
-settingsedited = 
-showall = Toti aratati
+rsspass = Parola RSS
+rssuser = Utilizator RSS
+send = Trimite
+settings = Setări
+settingschanged = Setările au fost schimbate 
+settingsedited = Setările au fost modificate
+showall = Tot vizibil
+started = Început
 subtitle = Subtitlu
-systemadministration = Administrarea sistemului
-systemdefault = 
-systemsounds = 
+systemadministration = Administrare sistem
+systemdefault = Default
+systemsounds = Sunete sistem
 tags = Tags
 was = a fost
 were = au fost
