--- a/language/de/lng.conf
+++ b/language/de/lng.conf
@@ -27,7 +27,7 @@ loginbutton = Einloggen
 loginerror = Login fehlgeschlagen<br />Bitte Benutzernamen und Passwort prüfen!
 logout = Abmelden
 male = Männlich
-members = Leute
+members = Mitglieder
 myaccount = Mein Profil
 newpass = Neues Passwort
 oldpass = Altes Passwort
@@ -85,7 +85,7 @@ edittasklist = Aufgabenliste bearbeiten
 latetasks = Verspätete Aufgaben
 mytasks = Meine Aufgaben
 newtasks = Aktuelle Aufgaben
-notasklists = Keine Aufgabenliste gefunden.<br />Bitte zuerst eine Taskliste erstellen.
+notasklists = Keine Aufgabenliste gefunden. Bitte zuerst eine Aufgabenliste erstellen.
 notasks = Zur Zeit stehen keine Aufgaben an.
 openprogress = Offen
 status = Status
@@ -130,6 +130,8 @@ messages = Nachrichten
 messagewasadded = Nachricht wurde erstellt
 messagewasdeleted = Nachricht wurde gelöscht
 messagewasedited = Nachricht wurde bearbeitet
+messagewasaddedsubject = Collabtive Benachrichtigung: Nachricht erstellt
+messagewasaddedtext = folgende Nachricht wurde erstellt:
 mymessages = Meine Nachrichten
 replies = Antworten
 reply = Antwort
@@ -144,13 +146,14 @@ mailserver = Server
 mailusername = SMTP-User
 mailpass = SMTP-Passwort
 profileaddedsubject = Collabtive Benachrichtigung – Benutzerprofil erstellt
-profileaddedtext = Hallo,<br /><br />Es wurde ein neues Collabtive Benutzerprofil für sie erstellt.<br />
+profileaddedtext = Es wurde ein neues Collabtive Benutzerprofil bei der nachstehenden Webseite für Sie erstellt. Bitte ändern Sie aus Sicherheitsgründen das Passwort nach Ihrem ersten Login!
 profilepass = Passwort
 profileusername = Benutzername
+hello = Hallo
 projectassignedsubject = Collabtive Benachrichtigung – Projekt zugewiesen
-projectassignedtext = Hallo,<br /><br />sie wurden folgendem Projekt zugewiesen:<br />
+projectassignedtext = Sie wurden folgendem Projekt zugewiesen:
 taskassignedsubject = Collabtive Benachrichtigung – Aufgabe zugewiesen
-taskassignedtext = Hallo,<br /><br />folgende Aufgabe wurde ihnen zugewiesen:<br />
+taskassignedtext = folgende Aufgabe wurde Ihnen zugewiesen:
 addfile = Datei hinzufügen
 addfiles = Dateien hinzufügen
 addfolder = Ordner erstellen
@@ -164,7 +167,7 @@ editfolder = Ordner bearbeiten
 file = Datei
 files = Dateien
 filecreatedsubject = Collabtive Benachrichtigung – Datei erstellt
-filecreatedtext = Hallo,<br /><br />in einem ihrer Projekte wurde eine neue Datei erstellt.<br />
+filecreatedtext = eine Datei wurde einem Ihrer Projekte hinzugefügt:
 filewasadded = Datei wurde erstellt
 filewasdeleted = Datei wurde gelöscht
 filewasedited = Datei wurde bearbeitet
