--- a/language/en/lng.conf
+++ b/language/en/lng.conf
@@ -93,7 +93,7 @@ edittasklist = Edit tasklist
 latetasks = Late tasks
 mytasks = My tasks
 newtasks = New tasks
-notasklists = No tasklist found.<br />Please create a tasklist.
+notasklists = No tasklist found. Please create a tasklist.
 notasks = No tasks pending
 openprogress = Open
 status = Status
@@ -144,6 +144,8 @@ messages = Messages
 messagewasadded = Message was added
 messagewasdeleted = Message was deleted
 messagewasedited = Message was edited
+messagewasaddedsubject = Collabtive notification: Message added
+messagewasaddedtext = the following message was added:
 mymessages = My messages
 replies = Replies
 reply = Reply
@@ -161,13 +163,14 @@ mailserver = Server
 mailusername = SMTP username
 mailpass = SMTP password
 profileaddedsubject = Collabtive notification – User profile created
-profileaddedtext = Hello,<br /><br />a new user profile has been created for you:<br />
+profileaddedtext = A new user profile on the following website has been created for you. Please change your password after the first login for security reasons!
 profilepass = Password
 profileusername = Username
+hello = Hello
 projectassignedsubject = Collabtive notification – Project assigned
-projectassignedtext = Hello,<br /><br />a new project has been assigned to you:<br />
+projectassignedtext = a new project has been assigned to you:
 taskassignedsubject = Collabtive notification – Task assigned
-taskassignedtext = Hello,<br /><br />a new task has been assigned to you:<br />
+taskassignedtext = a new task has been assigned to you:
 
 {* Files *}
 
@@ -183,7 +186,7 @@ editfile = Edit file
 editfolder = Edit folder
 file = File
 filecreatedsubject = Collabtive notification – File added
-filecreatedtext = Hello,<br /><br />a file has been added to one of your projects.<br />
+filecreatedtext = a file has been added to one of your projects.
 files = Files
 filewasadded = File was added
 filewasdeleted = File was deleted
